Prevent scrollbar from stopping between open and closed.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -217,7 +217,7 @@ a:active {
 	top: $header-height;
 	right: 0;
 	overflow: hidden;
-	pointer-events: none;
+	// pointer-events: none;
 
 	div {
 		display: flex;
